--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Discord | Your Place to Talk and Hangout</title>
-    <link rel="shortcut icon" href="../src/assets/discord-favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/discord-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,8 +19,8 @@
         <!-- Side drawer navbar which will be shown on screen sizes < 1024px -->
         <nav class="fixed lg:hidden w-80 h-[100vh] bg-white pt-6 pr-8 pb-28  pl-6 rounded-[8px_0px_0px_8px] right-0 z-[110] duration-[400] transition-transform translate-x-[22rem] hidden ease-in-out" id="side-menu">
             <div class="w-full flex items-center justify-between">
-                <img src="../src/assets/discord-logo-black.svg" alt="Discord logo" width="124px" height="34px">
-                <img src="../src/assets/close-button.svg" alt="Close" class="w-4 h-4 close-menu-btn">
+                <img src="./assets/discord-logo-black.svg" alt="Discord logo" width="124px" height="34px">
+                <img src="./assets/close-button.svg" alt="Close" class="w-4 h-4 close-menu-btn">
             </div>
             <div class="w-full h-px bg-[#ebedef] mt-6 mb-4"></div>
             <div class="w-full flex flex-col items-center text-left text-not-quite-black-900">
@@ -39,7 +39,7 @@
         <!-- Navbar which will be shown on screen sizes >= 1024 px -->
         <nav class="max-w-[1260px] h-20 mx-auto flex items-center lg:justify-around font-primary justify-between px-5 lg:px-0">
             <a href="https://discord.com/">
-                <img src="../src/assets/discord-logo-white.svg" alt="Discord logo" width="124px" height="34px" class="mr-10">
+                <img src="./assets/discord-logo-white.svg" alt="Discord logo" width="124px" height="34px" class="mr-10">
             </a>
             <div class="headder-links hidden lg:flex items-center space-x-[0.625rem] text-center text-white font-semibold text-sm">
                 <a href="https://discord.com/download" class="p-[0.625rem] hover:underline">Download</a>
@@ -54,13 +54,13 @@
                 <button class="w-[7.75rem] bg-white font-medium rounded-[2.5rem] text-sm px-4 py-[9px] text-not-quite-black-900 hover:text-blurple hover:shadow-btn-hover transition duration-200 ml-10">Open Discord</button>
             </a>
 
-            <img src="../src/assets/hamburger.svg" alt="" class="hamburger-menu-btn w-8 h-8 block lg:hidden">
+            <img src="./assets/hamburger.svg" alt="" class="hamburger-menu-btn w-8 h-8 block lg:hidden">
         </nav>
 
         <!-- Header background images -->
-        <img src="../src/assets/bg-mountains.svg" alt="" class="absolute bottom-0 object-cover left-0 h-[100%] bg-deep-blurple z-[-100]">
-        <img src="../src/assets/friends-hangout-left.svg" alt="" class="absolute bottom-0 left-[-17rem] z-[-100] hidden lg:block">
-        <img src="../src/assets/friends-hangout-right.svg" alt="" class="absolute bottom-0 right-[-4rem] lg:right-[-13rem] z-[-100]">
+        <img src="./assets/bg-mountains.svg" alt="" class="absolute bottom-0 object-cover left-0 h-[100%] bg-deep-blurple z-[-100]">
+        <img src="./assets/friends-hangout-left.svg" alt="" class="absolute bottom-0 left-[-17rem] z-[-100] hidden lg:block">
+        <img src="./assets/friends-hangout-right.svg" alt="" class="absolute bottom-0 right-[-4rem] lg:right-[-13rem] z-[-100]">
 
         <!-- Header hero section -->
         <div class="w-[95%] lg:max-w-[1260px] py-8 lg:py-[7.5rem] mx-auto flex flex-col justify-start lg:justify-center text-center font-primary text-white">
@@ -73,7 +73,7 @@
                     <button class="w-full h-12 sm:w-72 sm:h-14 text-base rounded-[1.75rem] px-2 py-4 bg-white text-not-quite-black-900 hover:text-blurple hover:shadow-btn-hover transition duration-200 font-medium">
                         <a href="https://discord.com/download">
                             <div class="w-full h-full flex items-center justify-center gap-2">
-                                <img src="../src/assets/download.svg" alt="Download icon" class="w-[18px] h-[18px]">
+                                <img src="./assets/download.svg" alt="Download icon" class="w-[18px] h-[18px]">
                                 <p class="download-tag">Download for Windows</p>
                             </div>
                         </a>
@@ -88,7 +88,7 @@
     <main class="w-full text-not-quite-black-900 font-primary">
         <div class="w-full py-14 md:py-20 lg:py-[7.5rem] bg-white">
             <div class="feature-card w-[95%] lg:max-w-[1260px] mx-auto flex flex-col md:flex-row gap-8 lg:gap-14 xl:gap-36 opacity-0">
-                <img src="../src/assets/study-group.svg" alt="" class="w-auto md:w-1/2 lg:w-auto">
+                <img src="./assets/study-group.svg" alt="" class="w-auto md:w-1/2 lg:w-auto">
                 <div class="flex flex-col items-center justify-evenly px-3 text-center md:text-left">
                     <h2 class="text-lg sm:text-3xl md:text-5xl font-extrabold">Create an invite-only place where you belong</h2>
                     <p class="text-sm sm:text-lg lg:text-xl md:leading-10 font-light">Discord servers are organized into topic-based channels where you can collaborate, share, and just talk about your day without clogging up a group chat.</p>
@@ -97,7 +97,7 @@
         </div>
         <div class="w-full py-14 md:py-20 lg:py-[7.5rem] bg-gray">
             <div class="feature-card w-[95%] lg:max-w-[1260px] mx-auto flex flex-col md:flex-row-reverse gap-8 lg:gap-14 xl:gap-36 opacity-0">
-                <img src="../src/assets/just-chilling.svg" alt="" class="w-auto md:w-1/2 lg:w-auto">
+                <img src="./assets/just-chilling.svg" alt="" class="w-auto md:w-1/2 lg:w-auto">
                 <div class="flex flex-col items-center justify-evenly px-3 text-center md:text-left">
                     <h2 class="text-lg sm:text-3xl md:text-5xl font-extrabold">Where hanging out is easy</h2>
                     <p class="text-sm sm:text-lg lg:text-xl md:leading-10 font-light">Grab a seat in a voice channel when you’re free. Friends in your server can see you’re around and instantly pop in to talk without having to call.</p>
@@ -106,7 +106,7 @@
         </div>
         <div class="w-full py-14 md:py-20 lg:py-[7.5rem] bg-white">
             <div class="feature-card w-[95%] lg:max-w-[1260px] mx-auto flex flex-col md:flex-row gap-8 lg:gap-14 xl:gap-36 opacity-0">
-                <img src="../src/assets/graggle-fandom.svg" alt="" class="w-auto md:w-1/2 lg:w-auto">
+                <img src="./assets/graggle-fandom.svg" alt="" class="w-auto md:w-1/2 lg:w-auto">
                 <div class="flex flex-col items-center justify-evenly px-3 text-center md:text-left">
                     <h2 class="text-lg sm:text-3xl md:text-5xl font-extrabold">From few to a fandom</h2>
                     <p class="text-sm sm:text-lg lg:text-xl md:leading-10 font-light">Get any community running with moderation tools and custom member access. Give members special powers, set up private channels, and more.</p>
@@ -114,21 +114,21 @@
             </div>
         </div>
         <div class="w-full py-14 md:py-20 lg:py-[7.5rem] bg-gray">
-            <div class="feature-card w-[95%] lg:max-w-[1260px] mx-auto px-1 md:px-11 py-20 opacity-0">
+            <div class="feature-card w-[95%] lg:max-w-[1260px] mx-auto px-1 md:px-11 py-10 xs:py-20 opacity-0">
                 <div class="text-center px-6 lg:px-28">
                     <h2 class="font-headline text-[2.5rem]">RELIABLE TECH FOR STAYING CLOSE</h2>
                     <p class="text-xl leading-10 font-light">Low-latency voice and video feels like you’re in the same room. Wave hello over video, watch friends stream their games, or gather up and have a drawing session with screen share.</p>
                 </div>
-                <img src="../src/assets/reliable-tech.svg" alt="Friends talking with each other via screenshare on desktop and mobile" class="w-full h-auto object-cover">
+                <img src="./assets/reliable-tech.svg" alt="Friends talking with each other via screenshare on desktop and mobile" class="w-full h-auto object-cover">
             </div>
             <div class="max-w-[1260px] mx-auto flex flex-col items-center justify-evenly">
-                <img src="../src/assets/bg-stars.svg" alt="Sparkles" class="w-auto h-auto">
+                <img src="./assets/bg-stars.svg" alt="Sparkles" class="w-auto h-auto">
                 <h4 class="font-bold text-3xl font-primary mt-[-1rem] text-center">Ready to start your journey?</h4>
                 
                 <button class="w-[95%] md:w-72 h-14 text-base rounded-[1.75rem] px-2 py-4 bg-blurple text-white hover:bg-bright-blurple hover:shadow-btn-hover transition duration-200 font-medium mt-[2.5rem]">
                     <a href="https://discord.com/download">
                         <div class="w-full h-full flex items-center justify-center gap-2">
-                            <img src="../src/assets/download-white.svg" alt="Download icon" class="w-[18px] h-[18px]">
+                            <img src="./assets/download-white.svg" alt="Download icon" class="w-[18px] h-[18px]">
                             <p class="download-tag">Download for Windows</p>
                         </div>
                     </a>
@@ -141,14 +141,14 @@
             <div class="">
                 <h4 class="font-headline font-extrabold text-[2rem] text-blurple">IMAGINE A PLACE</h4>
                 <div class="text-sm mt-6 flex">
-                    <img src="../src/assets/India-flag-icon.png" alt="India Flag" class="w-8 h-auto mr-2">
+                    <img src="./assets/India-flag-icon.png" alt="India Flag" class="w-8 h-auto mr-2">
                     English, INDIA
                 </div>
                 <div class="mt-6 space-x-4 flex">
-                    <a href="https://www.twitter.com/discord/" target="_blank"><img src="../src/assets/twitter.svg" alt="" class="w-6 h-6"></a>
-                    <a href="https://www.instagram.com/discord/" target="_blank"><img src="../src/assets/instagram.svg" alt="" class="w-6 h-6"></a>
-                    <a href="https://www.facebook.com/discord/" target="_blank"><img src="../src/assets/facebook.svg" alt="" class="w-6 h-6"></a>
-                    <a href="https://www.youtube.com/discord/" target="_blank"><img src="../src/assets/youtube.svg" alt="" class="w-6 h-6"></a>
+                    <a href="https://www.twitter.com/discord/" target="_blank"><img src="./assets/twitter.svg" alt="" class="w-6 h-6"></a>
+                    <a href="https://www.instagram.com/discord/" target="_blank"><img src="./assets/instagram.svg" alt="" class="w-6 h-6"></a>
+                    <a href="https://www.facebook.com/discord/" target="_blank"><img src="./assets/facebook.svg" alt="" class="w-6 h-6"></a>
+                    <a href="https://www.youtube.com/discord/" target="_blank"><img src="./assets/youtube.svg" alt="" class="w-6 h-6"></a>
                 </div>
             </div>
 
@@ -198,7 +198,7 @@
         <div class="w-[90%] xl:w-[1260px] mx-auto px-8">
             <div class="w-full flex justify-between items-end [border-top:1px_solid_#5865f2] pt-9">
                 <a href="/">
-                    <img src="../src/assets/discord-logo-white.svg" alt="Discord logo" width="124px" height="34px" class="mr-10">
+                    <img src="./assets/discord-logo-white.svg" alt="Discord logo" width="124px" height="34px" class="mr-10">
                 </a>
                 <a href="/">
                     <button class="rounded-[2.5rem] text-sm px-4 py-2 bg-blurple hover:bg-bright-blurple hover:shadow-btn-hover transition duraion-200">Open Discord</button>
@@ -207,5 +207,5 @@
         </div>
     </footer>
 </body>
-<script src="../src/script.js"></script>
+<script src="script.js"></script>
 </html>
